src/objects/Equipment_Log__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Construction__c</fullName>
        <label>Construction</label>
        <referenceTo>Construction__c</referenceTo>
        <relationshipName>EPC_Equipment_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Inverter__c</fullName>
        <formula>Total_Inverter_Cost__c / Total_InverterQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Inverter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Module__c</fullName>
        <formula>Total_Module_Cost__c /  Total_ModuleQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Module</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DC_AC_Ratio__c</fullName>
        <label>DC/AC Ratio</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase__c</fullName>
        <label>Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EPC Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Equipment Logs</relationshipLabel>
        <relationshipName>EPC_Equipment_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inverter_Cost_per_Wattage__c</fullName>
        <formula>Total_Inverter_Cost__c  /  Total_Inverter_Wattage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter Cost per Wattage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Module_Cost_per_Wattage__c</fullName>
        <formula>Total_Module_Cost__c / Total_Module_Wattage_kw_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Cost per Wattage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost ($)</label>
        <summarizedField>Equipment__c.Cost__c</summarizedField>
        <summaryForeignKey>Equipment__c.Equipment_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_InverterQuantity__c</fullName>
        <label>Total Inverter Quantity</label>
        <summarizedField>Equipment__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Equipment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Inverter</value>
        </summaryFilterItems>
        <summaryForeignKey>Equipment__c.Equipment_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Inverter_Cost__c</fullName>
        <label>Total Inverter Cost</label>
        <summarizedField>Equipment__c.Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Equipment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Inverter</value>
        </summaryFilterItems>
        <summaryForeignKey>Equipment__c.Equipment_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Inverter_Wattage__c</fullName>
        <label>Total Inverter Wattage (kW AC)</label>
        <summarizedField>Equipment__c.Size__c</summarizedField>
        <summaryFilterItems>
            <field>Equipment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Inverter</value>
        </summaryFilterItems>
        <summaryForeignKey>Equipment__c.Equipment_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_ModuleQuantity__c</fullName>
        <label>Total Module Quantity</label>
        <summarizedField>Equipment__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Equipment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Module</value>
        </summaryFilterItems>
        <summaryForeignKey>Equipment__c.Equipment_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Module_Cost__c</fullName>
        <label>Total Module Cost</label>
        <summarizedField>Equipment__c.Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Equipment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Module</value>
        </summaryFilterItems>
        <summaryForeignKey>Equipment__c.Equipment_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Module_Wattage_kw_DC__c</fullName>
        <label>Total Module Wattage (kW DC)</label>
        <summarizedField>Equipment__c.Size__c</summarizedField>
        <summaryFilterItems>
            <field>Equipment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Module</value>
        </summaryFilterItems>
        <summaryForeignKey>Equipment__c.Equipment_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Other_Equipment_Cost__c</fullName>
        <label>Total Other Equipment Cost</label>
        <summarizedField>Equipment__c.Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Equipment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Racking, Transformer, Neutral Ground Reactor</value>
        </summaryFilterItems>
        <summaryForeignKey>Equipment__c.Equipment_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Equipment Log</label>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>